--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -47,7 +47,7 @@
       }
     ]
   },
-  "RumbleConfig": "https://192.168.0.66/digimon/cdn/rumble/live/RumbleConfig.json",
+  "RumbleConfig": "https://digital-shinka.github.io/digimon/cdn/rumble/live/RumbleConfig.json",
   "MainUrl": [
     {
       "TypeName": "GSP",
