--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -25,13 +25,17 @@
   },
   "UMInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/UpdateManager/",
-    "CurrentVersion": 8,
+    "CurrentVersion": 9,
     "ExeFileName": "UpdateManager.exe",
     "RunExeFileName": "DSOLauncher.exe",
     "VersionList": [
       {
         "Version": 8,
         "DownloadFile": "UM_8.zip"
+      }
+	  {
+        "Version": 9,
+        "DownloadFile": "UM_9.zip"
       }
     ]
   },
