--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -2,7 +2,7 @@
   "ServerInfo": {
     "Maintenance": false,
     "Message": {
-      "Title": "",
+      "Title": "Digital Shinka Online In Development",
       "Msg": "The server is undergoing inspection or updates.\nConnect to <https://discord.gg/vtNnzfSF for more information"
     }
   },
