--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -2,7 +2,7 @@
   "ServerInfo": {
     "Maintenance": false,
     "Message": {
-      "Title": "Digital Shinka Online In Development",
+      "Title": "Digital Shinka Online In Development.",
       "Msg": "The server is undergoing inspection or updates.\nConnect to <https://discord.gg/vtNnzfSF for more information"
     }
   },
@@ -13,13 +13,18 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 310,
+    "CurrentVersion": 311,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
       {
         "Version": 310,
         "DownloadFile": "Launcher_310.zip"
+      }
+	  ,
+	  {
+        "Version": 311,
+        "DownloadFile": "Launcher_311.zip"
       }
     ]
   },
