--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -13,7 +13,7 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 311,
+    "CurrentVersion": 312,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
@@ -25,6 +25,11 @@
 	  {
         "Version": 311,
         "DownloadFile": "Launcher_311.zip"
+      }
+	  ,
+	  {
+        "Version": 312,
+        "DownloadFile": "Launcher_312.zip"
       }
     ]
   },
