--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -1,6 +1,6 @@
 {
   "ServerInfo": {
-    "Maintenance": false,
+    "Maintenance": true,
     "Message": {
       "Title": "Digital Shinka Online In Development.",
       "Msg": "The server is undergoing inspection or updates.\nConnect to <https://discord.gg/vtNnzfSF for more information."
@@ -9,7 +9,7 @@
   "PatchInfo": {
     "DownloadUrl": "https://digital-shinka.github.io/Site/UpdatePatch/",
     "MinPatchVersion": 1,
-    "PatchVersion":12 
+    "PatchVersion":12   
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
