--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -79,8 +79,10 @@
       "HomePageUrl": "https://discord.gg/vtNnzfSF",
       "GameDownloadUrl": "https://discord.gg/vtNnzfSF",
       "MainPageUrl": "https://digital-shinka.github.io/Site/main.html",
-      "BanerUrl": "https://digital-shinka.github.io/Site/banner.html"
-      
+      "BanerUrl": "https://digital-shinka.github.io/Site/banner.html",
+      "ClientIP": "190.102.42.152",
+	  "ClientPort": "7029"
+	  
     }
   ]
 }
