--- a/Client/DSO_Configuration_down.json
+++ b/Client/DSO_Configuration_down.json
@@ -1,5 +1,5 @@
 {
-	"Maintance": false,
+	"Maintance": true,
   "fileSize": 16400,
   "downloadUrl": "https://dl.dropboxusercontent.com/s/yhgr2b4tjv1wltn/Digital%20Shinka%20Online.zip?dl=0"
 }
