--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -13,7 +13,7 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 314,
+    "CurrentVersion": 315,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
@@ -40,6 +40,11 @@
 	  {
         "Version": 314,
         "DownloadFile": "Launcher_314.zip"
+      }
+	   ,
+	  {
+        "Version": 315,
+        "DownloadFile": "Launcher_315.zip"
       }
     ]
   },
