--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -46,6 +46,11 @@
         "Version": 315,
         "DownloadFile": "Launcher_315.zip"
       }
+	  ,
+	  {
+        "Version": 316,
+        "DownloadFile": "Launcher_316.zip"
+      }
     ]
   },
   "UMInfo": {
