--- a/Client/DSO_Configuration_down.json
+++ b/Client/DSO_Configuration_down.json
@@ -1,5 +1,5 @@
 {
 	"Maintance": false,
   "fileSize": 16400,
-  "downloadUrl": "https://download1526.mediafire.com/r766vufal8kgVvTk7z8H7OARk7GlVOOn_XTZRdqLaKSQVMA4kOBUoLRElpp-PeSrA1FLeKpB19YiON0g-yxn9F9wnRaRTuTxe2jHkLeoln_Bj1mn8mnUIuPOjDt2z4inTQwwRUT6T9QO31Uqr_Hz5mXFM8MLEX1ofDedkatBmic-cfEF/aa55kz4i9aobf2g/Digital+Shinka+Online.zip"
+  "downloadUrl": "https://pixeldrain.com/api/file/azqKesMs?download"
 }
