--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -13,7 +13,7 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 317,
+    "CurrentVersion": 318,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
@@ -55,6 +55,11 @@
 	  {
         "Version": 317,
         "DownloadFile": "Launcher_317.zip"
+      }
+	   ,
+	  {
+        "Version": 318,
+        "DownloadFile": "Launcher_318.zip"
       }
     ]
   },
