--- a/Client/DSO_Configuration_down.json
+++ b/Client/DSO_Configuration_down.json
@@ -1,43 +1,43 @@
 {
   "Maintance": false,
   "fileSize": 16200,
-  "downloadUrlP1":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part001.rar?token=GHSAT0AAAAAACELETZK3DDEL7NNTEEF3C2WZEYVOAQ",
-  "downloadUrlP2":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part002.rar?token=GHSAT0AAAAAACELETZLWCJIJ6YMTSEMS6SMZEYVTZQ",
-  "downloadUrlP3":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part003.rar?token=GHSAT0AAAAAACELETZKWZGJNMNJYVDMWUMIZEYVTLA",
-  "downloadUrlP4":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part004.rar?token=GHSAT0AAAAAACELETZLK3RU7RLY563BRYCYZEYVU6A",
-  "downloadUrlP5":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part005.rar?token=GHSAT0AAAAAACELETZLP2OBYYFOQETDXBFUZEYVVGA",
-  "downloadUrlP6":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part006.rar?token=GHSAT0AAAAAACELETZLWY45RLACJJKJMRCSZEYVVPA",
-  "downloadUrlP7":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part007.rar?token=GHSAT0AAAAAACELETZKJOQNDIL4GUFBBGMWZEYVVYA",
-  "downloadUrlP8":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part008.rar?token=GHSAT0AAAAAACELETZL5SNEXQSRJQ3PETXUZEYVWBA",
-  "downloadUrlP9":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part009.rar?token=GHSAT0AAAAAACELETZKEKXIMPPM5EZUXDUCZEYVWMA",
-  "downloadUrlP10":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part010.rar?token=GHSAT0AAAAAACELETZKHEOXTMLWI2K2SG6MZEYVWVQ",
-  "downloadUrlP11":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part011.rar?token=GHSAT0AAAAAACELETZK54V6HBQ3HGIRYVUAZEYVWUA",
-  "downloadUrlP12":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part012.rar?token=GHSAT0AAAAAACELETZKSAVDKNIDYOG2EDBWZEYVXRQ",
-  "downloadUrlP13":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part013.rar?token=GHSAT0AAAAAACELETZKGK7HDJMMUD75ZRWMZEYVXWA",
-  "downloadUrlP14":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part014.rar?token=GHSAT0AAAAAACELETZLCCTY6BZ265BBSVJOZEYVX2Q",
-  "downloadUrlP15":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part015.rar?token=GHSAT0AAAAAACELETZKOJYKI3QVDAVJUUW6ZEYVX7A",
-  "downloadUrlP16":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part016.rar?token=GHSAT0AAAAAACELETZKMIY3MCESG2UTLQ22ZEYVYDQ",
-  "downloadUrlP17":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part017.rar?token=GHSAT0AAAAAACELETZLPJGI7GQRDQYH6ZGOZEYVYIQ",
-  "downloadUrlP18":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part018.rar?token=GHSAT0AAAAAACELETZKCAIKYMYR3Q6QPUHMZEYVZXA",
-  "downloadUrlP19":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part019.rar?token=GHSAT0AAAAAACELETZKI7PO6MCV6ECTUXX2ZEYVZ4A",
-  "downloadUrlP20":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part020.rar?token=GHSAT0AAAAAACELETZKB7HVCOUY7ET7HBX6ZEYV2AA",
-  "downloadUrlP21":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part021.rar?token=GHSAT0AAAAAACELETZL2NCXE54EWPCDEG7YZEYV2EQ",
-  "downloadUrlP22":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part022.rar?token=GHSAT0AAAAAACELETZKRG7V6QBUPXGALOMUZEYV2JQ",
-  "downloadUrlP23":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part023.rar?token=GHSAT0AAAAAACELETZLB4MC7HIBV7PYD2DSZEYV2NQ",
-  "downloadUrlP24":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part024.rar?token=GHSAT0AAAAAACELETZLROFLI53CWUYOWAJOZEYV2SA",
-  "downloadUrlP25":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part025.rar?token=GHSAT0AAAAAACELETZKCJ5GIF7JLEX23KBIZEYV2WQ",
-  "downloadUrlP26":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part026.rar?token=GHSAT0AAAAAACELETZKRWYOCSPBBZT43GVWZEYV4DA",
-  "downloadUrlP27":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part027.rar?token=GHSAT0AAAAAACELETZKI5J7OCJF3WIFJQRWZEYV4HA",
-  "downloadUrlP28":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part028.rar?token=GHSAT0AAAAAACELETZKSH5647MSEJDXDQLSZEYV4MA",
-  "downloadUrlP29":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part029.rar?token=GHSAT0AAAAAACELETZKQUY5ULLL3ILQGRR4ZEYV4QQ",
-  "downloadUrlP30":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part030.rar?token=GHSAT0AAAAAACELETZL6QXKUK26ODMJS4GQZEYWALA",
-  "downloadUrlP31":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part031.rar?token=GHSAT0AAAAAACELETZK23LPDNXAGQ5TM2RGZEYWAPA",
-  "downloadUrlP32":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part032.rar?token=GHSAT0AAAAAACELETZKNZPYCDHNCFPRCOH4ZEYV5BQ",
-  "downloadUrlP33":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part033.rar?token=GHSAT0AAAAAACELETZKK65Q2ULNEVQD5TMGZEYV5GA",
-  "downloadUrlP34":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part034.rar?token=GHSAT0AAAAAACELETZLDMP7ZJAAXPUTT6QQZEYV5LQ",
-  "downloadUrlP35":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part035.rar?token=GHSAT0AAAAAACELETZLZB33EHNTTBKKQFXYZEYV5QA",
-  "downloadUrlP36":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part036.rar?token=GHSAT0AAAAAACELETZKONXB4GYJ2AL6NTMOZEYV7CQ",
-  "downloadUrlP37":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part037.rar?token=GHSAT0AAAAAACELETZKJIQZNEGG5O5HGP24ZEYV7GQ",
-  "downloadUrlP38":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part038.rar?token=GHSAT0AAAAAACELETZKC2FHN4QPOPH33WVEZEYV7KQ",
-  "downloadUrlP39":"https://raw.githubusercontent.com/Digital-Shinka/Site/main/Client/Archive/Digital%20Shinka%20Online.part039.rar?token=GHSAT0AAAAAACELETZLSA5Y46O4AYPSWZZWZEYV7OQ"	
+  "downloadUrlP1":"https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part001.rar",
+  "downloadUrlP2":"https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part002.rar",
+  "downloadUrlP3":"https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part003.rar",
+  "downloadUrlP4":"https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part004.rar",
+  "downloadUrlP5": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part005.rar",
+  "downloadUrlP6": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part006.rar",
+  "downloadUrlP7": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part007.rar",
+  "downloadUrlP8": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part008.rar",
+  "downloadUrlP9": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part009.rar",
+  "downloadUrlP10": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part010.rar",
+  "downloadUrlP11": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part011.rar",
+  "downloadUrlP12": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part012.rar",
+  "downloadUrlP13": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part013.rar",
+  "downloadUrlP14": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part014.rar",
+  "downloadUrlP15": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part015.rar",
+  "downloadUrlP16": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part016.rar",
+  "downloadUrlP17": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part017.rar",
+  "downloadUrlP18": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part018.rar",
+  "downloadUrlP19": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part019.rar",
+  "downloadUrlP20": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part020.rar",
+  "downloadUrlP21": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part021.rar",
+  "downloadUrlP22": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part022.rar",
+  "downloadUrlP23": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part023.rar",
+  "downloadUrlP24": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part024.rar",
+  "downloadUrlP25": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part025.rar",
+  "downloadUrlP26": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part026.rar",
+  "downloadUrlP27": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part027.rar",
+  "downloadUrlP28": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part028.rar",
+  "downloadUrlP29": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part029.rar",
+  "downloadUrlP30": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part030.rar",
+  "downloadUrlP31": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part031.rar",
+  "downloadUrlP32": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part032.rar",
+  "downloadUrlP33": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part033.rar",
+  "downloadUrlP34": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part034.rar",
+  "downloadUrlP35": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part035.rar",
+  "downloadUrlP36": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part036.rar",
+  "downloadUrlP37": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part037.rar",
+  "downloadUrlP38": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part038.rar",
+  "downloadUrlP39": "https://digital-shinka.github.io/Site/Archive/Digital%20Shinka%20Online.part039.rar"
 }
