--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -92,7 +92,7 @@
   },
   "Redist": {
     "Execute": "vcredist_x86.exe",
-    "Command": "/install /passive /norestart",
+    "Command": "/instaall /passive /norestart",
     "Registry": [
       {
         "Reg": "SOFTWARE\\Microsoft\\VisualStudio\\14.0\\VC\\Runtimes\\X86"
