--- a/Client/DSO_Configuration_down.json
+++ b/Client/DSO_Configuration_down.json
@@ -1,43 +1,6 @@
 {
   "Maintance": false,
-  "fileSize": 16200,
-  "downloadUrlP1":"https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part001.rar",
-  "downloadUrlP2":"https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part002.rar",
-  "downloadUrlP3":"https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part003.rar",
-  "downloadUrlP4":"https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part004.rar",
-  "downloadUrlP5": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part005.rar",
-  "downloadUrlP6": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part006.rar",
-  "downloadUrlP7": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part007.rar",
-  "downloadUrlP8": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part008.rar",
-  "downloadUrlP9": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part009.rar",
-  "downloadUrlP10": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part010.rar",
-  "downloadUrlP11": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part011.rar",
-  "downloadUrlP12": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part012.rar",
-  "downloadUrlP13": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part013.rar",
-  "downloadUrlP14": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part014.rar",
-  "downloadUrlP15": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part015.rar",
-  "downloadUrlP16": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part016.rar",
-  "downloadUrlP17": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part017.rar",
-  "downloadUrlP18": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part018.rar",
-  "downloadUrlP19": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part019.rar",
-  "downloadUrlP20": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part020.rar",
-  "downloadUrlP21": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part021.rar",
-  "downloadUrlP22": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part022.rar",
-  "downloadUrlP23": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part023.rar",
-  "downloadUrlP24": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part024.rar",
-  "downloadUrlP25": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part025.rar",
-  "downloadUrlP26": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part026.rar",
-  "downloadUrlP27": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part027.rar",
-  "downloadUrlP28": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part028.rar",
-  "downloadUrlP29": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part029.rar",
-  "downloadUrlP30": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part030.rar",
-  "downloadUrlP31": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part031.rar",
-  "downloadUrlP32": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part032.rar",
-  "downloadUrlP33": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part033.rar",
-  "downloadUrlP34": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part034.rar",
-  "downloadUrlP35": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part035.rar",
-  "downloadUrlP36": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part036.rar",
-  "downloadUrlP37": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part037.rar",
-  "downloadUrlP38": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part038.rar",
-  "downloadUrlP39": "https://digital-shinka.github.io/Archives/DigitalShinkaOnline.part039.rar"
+  "fileSize": 17200,
+  "downloadUrl":"http://168.138.237.87/DSO/Client/DigitalShinkaOnline.zip",
+  "FileName":"DSO_Installer_Ver2.rar"
 }
