--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -110,7 +110,7 @@
       "GameDownloadUrl": "https://discord.gg/vtNnzfSF",
       "MainPageUrl": "https://digital-shinka.github.io/Site/main.html",
       "BanerUrl": "https://digital-shinka.github.io/Site/banner.html",
-      "ClientIP": "102.165.46.171",
+      "ClientIP": "game.digitalshinkaonline.com",
 	    "ClientPort": "7056",
       "Unlock":false
 	  
