--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -13,7 +13,7 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 319,
+    "CurrentVersion": 320,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
@@ -66,6 +66,11 @@
         "Version": 319,
         "DownloadFile": "Launcher_319.zip"
       }
+      ,
+      {
+          "Version": 320,
+          "DownloadFile": "Launcher_320.zip"
+        }
     ]
   },
   "UMInfo": {
