--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -71,6 +71,11 @@
           "Version": 320,
           "DownloadFile": "Launcher_320.zip"
         }
+        ,
+      {
+          "Version": 321,
+          "DownloadFile": "Launcher_321.zip"
+        }
     ]
   },
   "UMInfo": {
