--- a/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
+++ b/digimon/cdn/dso/Live/DSO/DSO_Configuration_V2.json
@@ -13,7 +13,7 @@
   },
   "LanuncherInfo": {
     "DownloadPath": "https://digital-shinka.github.io/Site/Launcher/",
-    "CurrentVersion": 321,
+    "CurrentVersion": 322,
     "ExeFileName": "DSOLauncher.exe",
     "RunExeFileName": "GDMO.exe",
     "VersionList": [
@@ -76,6 +76,11 @@
           "Version": 321,
           "DownloadFile": "Launcher_321.zip"
         }
+        ,
+        {
+            "Version": 322,
+            "DownloadFile": "Launcher_322.zip"
+          }
     ]
   },
   "UMInfo": {
